test/Serialization/restrict-swiftmodule-to-revision.code
// RUN: %empty-directory(%t/cache)
// RUN: %empty-directory(%t/build)
// RUN: %{python} %utils/split_file.py -o %t %s

/// 1. Compile Lib.code as non-resilient untagged, resilient untagged, and resilient tagged
// BEGIN Lib.code
public fn foo() {}

/// Build Lib as a resilient and non-resilient languagemodule
// RUN: %target-language-frontend -emit-module %t/Lib.code -language-version 5 -o %t/build -parse-stdlib -module-cache-path %t/cache -module-name ResilientLib -enable-library-evolution
// RUN: %target-language-frontend -emit-module %t/Lib.code -language-version 5 -o %t/build -parse-stdlib -module-cache-path %t/cache -module-name NonResilientLib
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.0.1 \
// RUN:   %target-language-frontend -emit-module %t/Lib.code -language-version 5 -o %t/build -parse-stdlib -module-cache-path %t/cache -module-name TaggedLib -enable-library-evolution


/// 2. Test importing the non-resilient untagged library
// BEGIN NonResilientClient.code
import NonResilientLib
foo()

/// Building a NonResilientLib client should reject the import for a tagged compiler
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.0.1 \
// RUN:   not %target-language-frontend -typecheck %t/NonResilientClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache 2>&1 | %FileCheck -check-prefix=CHECK-NON-RESILIENT %s
// CHECK-NON-RESILIENT: compiled module was created by a different version of the compiler ''; rebuild 'NonResilientLib' and try again: {{.*}}NonResilientLib.codemodule


/// 3. Test importing the resilient untagged library
// BEGIN ResilientClient.code
import ResilientLib
foo()

/// Building a ResilientLib client should succeed in non-revision/dev mode
// RUN: %target-language-frontend -typecheck %t/ResilientClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache

/// Building a ResilientLib client should reject the import for a tagged compiler
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.0.1 \
// RUN:   not %target-language-frontend -typecheck %t/ResilientClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache 2>&1 | %FileCheck %s
// CHECK: compiled module was created by a different version of the compiler ''; rebuild 'ResilientLib' and try again: {{.*}}ResilientLib.codemodule

/// Building a ResilientLib client should succeed for a tagged compiler with LANGUAGE_IGNORE_LANGUAGEMODULE_REVISION
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.0.1 LANGUAGE_IGNORE_LANGUAGEMODULE_REVISION=true \
// RUN:   %target-language-frontend -typecheck %t/ResilientClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache


/// 4. Test importing the resilient tagged library
// BEGIN TaggedClient.code
import TaggedLib
foo()

/// Importing TaggedLib should succeed with the same tag.
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.0.1 \
// RUN:   %target-language-frontend -typecheck %t/TaggedClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache

/// Importing TaggedLib should succeed with a dev compiler
// RUN: %target-language-frontend -typecheck %t/TaggedClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache

/// Importing TaggedLib should succeed but remark on a last digit difference.
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.0.2 \
// RUN:   %target-language-frontend -typecheck %t/TaggedClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache 2>&1 | %FileCheck %s --check-prefix=CHECK-LAST-DIGIT
// CHECK-LAST-DIGIT: remark: compiled module was created by a different version of the compiler '1.0.0.0.1': {{.*}}TaggedLib.codemodule

/// Building a TaggedLib client should reject the import for a different tagged compiler
// RUN: env LANGUAGE_DEBUG_FORCE_LANGUAGEMODULE_REVISION=1.0.0.1.1 \
// RUN:   not %target-language-frontend -typecheck %t/TaggedClient.code -language-version 5 -I %t/build -parse-stdlib -module-cache-path %t/cache 2>&1 | %FileCheck %s --check-prefix=CHECK-TAGGED
// CHECK-TAGGED: error: compiled module was created by a different version of the compiler '1.0.0.0.1'; rebuild 'TaggedLib' and try again: {{.*}}TaggedLib.codemodule
